fix: fix ktlintFormat and ktlinFormat once